[package]
name = "playaround"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.14"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133" 
tokio = { version = "1.28.2", features = ["full"] }
my_proc_macro = { path = "my_proc_macro" }
ai_functions = "0.1.1"
